--- a/y3/sem_b/quiz_hw2/app/src/main/res/values/strings.xml
+++ b/y3/sem_b/quiz_hw2/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">hw2_quiz</string>
-    <string name="outcome_text">You have finished the test, see you next time</string>
+    <string name="outcome_text">You have finished the test\nsee you next time</string>
 
     <!-- TODO: Remove or change this placeholder text -->
 </resources>
