--- a/y3/sem_b/android/kotelmania/app/src/main/res/values/strings.xml
+++ b/y3/sem_b/android/kotelmania/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">kotelmania</string>
+    <string name="title_activity_main">Main</string>
+
+    <string name="title_activity_edit_note">EditNote</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
